--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,16 +12,13 @@
     "next": "16.1.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "axios": "^1.6.5",
-    "react-hook-form": "^7.50.1",
-    "js-cookie": "^3.0.5"
+    "react-hook-form": "^7.50.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/js-cookie": "^3.0.6",
     "eslint": "^9",
     "eslint-config-next": "16.1.2",
     "tailwindcss": "^4",
